FullPoly/Grammar/FullPolyParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /tmp/FullPoly.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class FullPolyParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		TYPE=1, IMPORT=2, SOME=3, INERT=4, IF=5, THEN=6, ELSE=7, TRUE=8, FALSE=9, 
		BOOL=10, CASE=11, OF=12, AS=13, LAMBDA=14, ALL=15, LET=16, IN=17, FIX=18, 
		LETREC=19, USTRING=20, UNIT=21, UUNIT=22, TIMESFLOAT=23, UFLOAT=24, SUCC=25, 
		PRED=26, ISZERO=27, NAT=28, STRINGV=29, USCORE=30, APOSTROPHE=31, DQUOTE=32, 
		BANG=33, HASH=34, TRIANGLE=35, STAR=36, VBAR=37, DOT=38, SEMI=39, COMMA=40, 
		SLASH=41, COLON=42, COLONCOLON=43, EQ=44, EQEQ=45, LSQUARE=46, LT=47, 
		LCURLY=48, LPAREN=49, LEFTARROW=50, LCURLYBAR=51, LSQUAREBAR=52, RCURLY=53, 
		RPAREN=54, RSQUARE=55, GT=56, BARRCURLY=57, BARGT=58, BARRSQUARE=59, COLONEQ=60, 
		ARROW=61, DARROW=62, DDARROW=63, FLOATV=64, INTV=65, UCID=66, LCID=67, 
		WS=68, TAB=69, NL=70, NL1=71;
	public const int
		RULE_toplevel = 0, RULE_command = 1, RULE_binder = 2, RULE_type = 3, RULE_atype = 4, 
		RULE_tybinder = 5, RULE_fieldtypes = 6, RULE_nefieldtypes = 7, RULE_fieldtype = 8, 
		RULE_arrowtype = 9, RULE_term = 10, RULE_appterm = 11, RULE_ascribeterm = 12, 
		RULE_pathterm = 13, RULE_termseq = 14, RULE_aterm = 15, RULE_cases = 16, 
		RULE_case = 17, RULE_fields = 18, RULE_nefields = 19, RULE_field = 20;
	public static readonly string[] ruleNames = {
		"toplevel", "command", "binder", "type", "atype", "tybinder", "fieldtypes", 
		"nefieldtypes", "fieldtype", "arrowtype", "term", "appterm", "ascribeterm", 
		"pathterm", "termseq", "aterm", "cases", "case", "fields", "nefields", 
		"field"
	};

	private static readonly string[] _LiteralNames = {
		null, "'type'", "'import'", "'Some'", "'inert'", "'if'", "'then'", "'else'", 
		"'true'", "'false'", "'Bool'", "'case'", "'of'", "'as'", "'lambda'", "'All'", 
		"'let'", "'in'", "'fix'", "'letrec'", "'String'", "'unit'", "'Unit'", 
		"'timesfloat'", "'Float'", "'succ'", "'pred'", "'iszero'", "'Nat'", null, 
		"'_'", "'''", "'\"'", "'!'", "'#'", "'$'", "'*'", "'|'", "'.'", "';'", 
		"','", "'/'", "':'", "'::'", "'='", "'=='", "'['", "'<'", "'{'", "'('", 
		"'<-'", "'{|'", "'[|'", "'}'", "')'", "']'", "'>'", "'|}'", "'|>'", "'|]'", 
		"':='", "'->'", "'=>'", "'==>'", null, null, null, null, "' '", "'\\t'", 
		"'\\r'", "'\\n'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "TYPE", "IMPORT", "SOME", "INERT", "IF", "THEN", "ELSE", "TRUE", 
		"FALSE", "BOOL", "CASE", "OF", "AS", "LAMBDA", "ALL", "LET", "IN", "FIX", 
		"LETREC", "USTRING", "UNIT", "UUNIT", "TIMESFLOAT", "UFLOAT", "SUCC", 
		"PRED", "ISZERO", "NAT", "STRINGV", "USCORE", "APOSTROPHE", "DQUOTE", 
		"BANG", "HASH", "TRIANGLE", "STAR", "VBAR", "DOT", "SEMI", "COMMA", "SLASH", 
		"COLON", "COLONCOLON", "EQ", "EQEQ", "LSQUARE", "LT", "LCURLY", "LPAREN", 
		"LEFTARROW", "LCURLYBAR", "LSQUAREBAR", "RCURLY", "RPAREN", "RSQUARE", 
		"GT", "BARRCURLY", "BARGT", "BARRSQUARE", "COLONEQ", "ARROW", "DARROW", 
		"DDARROW", "FLOATV", "INTV", "UCID", "LCID", "WS", "TAB", "NL", "NL1"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FullPoly.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static FullPolyParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FullPolyParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FullPolyParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ToplevelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command() {
			return GetRuleContext<CommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(FullPolyParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ToplevelContext toplevel() {
			return GetRuleContext<ToplevelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FullPolyParser.Eof, 0); }
		public ToplevelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_toplevel; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitToplevel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ToplevelContext toplevel() {
		ToplevelContext _localctx = new ToplevelContext(Context, State);
		EnterRule(_localctx, 0, RULE_toplevel);
		try {
			State = 47;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IMPORT:
			case INERT:
			case IF:
			case TRUE:
			case FALSE:
			case CASE:
			case LAMBDA:
			case LET:
			case FIX:
			case LETREC:
			case UNIT:
			case TIMESFLOAT:
			case SUCC:
			case PRED:
			case ISZERO:
			case STRINGV:
			case LT:
			case LCURLY:
			case LPAREN:
			case FLOATV:
			case INTV:
			case UCID:
			case LCID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 42;
				command();
				State = 43;
				Match(SEMI);
				State = 44;
				toplevel();
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				State = 46;
				Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
	 
		public CommandContext() { }
		public virtual void CopyFrom(CommandContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Command_binderContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCID() { return GetToken(FullPolyParser.LCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BinderContext binder() {
			return GetRuleContext<BinderContext>(0);
		}
		public Command_binderContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_binder(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Command_importContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IMPORT() { return GetToken(FullPolyParser.IMPORT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRINGV() { return GetToken(FullPolyParser.STRINGV, 0); }
		public Command_importContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_import(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Command_somebindContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCURLY() { return GetToken(FullPolyParser.LCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UCID() { return GetToken(FullPolyParser.UCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(FullPolyParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCID() { return GetToken(FullPolyParser.LCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCURLY() { return GetToken(FullPolyParser.RCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(FullPolyParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public Command_somebindContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_somebind(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Command_termContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public Command_termContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_term(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Command_tybinderContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UCID() { return GetToken(FullPolyParser.UCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TybinderContext tybinder() {
			return GetRuleContext<TybinderContext>(0);
		}
		public Command_tybinderContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_tybinder(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 2, RULE_command);
		try {
			State = 63;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				_localctx = new Command_termContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 49;
				term();
				}
				break;
			case 2:
				_localctx = new Command_importContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 50;
				Match(IMPORT);
				State = 51;
				Match(STRINGV);
				}
				break;
			case 3:
				_localctx = new Command_tybinderContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 52;
				Match(UCID);
				State = 53;
				tybinder();
				}
				break;
			case 4:
				_localctx = new Command_binderContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 54;
				Match(LCID);
				State = 55;
				binder();
				}
				break;
			case 5:
				_localctx = new Command_somebindContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 56;
				Match(LCURLY);
				State = 57;
				Match(UCID);
				State = 58;
				Match(COMMA);
				State = 59;
				Match(LCID);
				State = 60;
				Match(RCURLY);
				State = 61;
				Match(EQ);
				State = 62;
				term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BinderContext : ParserRuleContext {
		public BinderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_binder; } }
	 
		public BinderContext() { }
		public virtual void CopyFrom(BinderContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Binder_termContext : BinderContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(FullPolyParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public Binder_termContext(BinderContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinder_term(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Binder_typeContext : BinderContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(FullPolyParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public Binder_typeContext(BinderContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinder_type(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BinderContext binder() {
		BinderContext _localctx = new BinderContext(Context, State);
		EnterRule(_localctx, 4, RULE_binder);
		try {
			State = 69;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case COLON:
				_localctx = new Binder_typeContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 65;
				Match(COLON);
				State = 66;
				type();
				}
				break;
			case EQ:
				_localctx = new Binder_termContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 67;
				Match(EQ);
				State = 68;
				term();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
	 
		public TypeContext() { }
		public virtual void CopyFrom(TypeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Type_arrowtypeContext : TypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ArrowtypeContext arrowtype() {
			return GetRuleContext<ArrowtypeContext>(0);
		}
		public Type_arrowtypeContext(TypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_arrowtype(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Type_allContext : TypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ALL() { return GetToken(FullPolyParser.ALL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UCID() { return GetToken(FullPolyParser.UCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(FullPolyParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public Type_allContext(TypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_all(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 6, RULE_type);
		try {
			State = 76;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case BOOL:
			case USTRING:
			case UUNIT:
			case UFLOAT:
			case NAT:
			case LT:
			case LCURLY:
			case LPAREN:
			case UCID:
				_localctx = new Type_arrowtypeContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 71;
				arrowtype();
				}
				break;
			case ALL:
				_localctx = new Type_allContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 72;
				Match(ALL);
				State = 73;
				Match(UCID);
				State = 74;
				Match(DOT);
				State = 75;
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtypeContext : ParserRuleContext {
		public AtypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atype; } }
	 
		public AtypeContext() { }
		public virtual void CopyFrom(AtypeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class At_natContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAT() { return GetToken(FullPolyParser.NAT, 0); }
		public At_natContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_nat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_boolContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL() { return GetToken(FullPolyParser.BOOL, 0); }
		public At_boolContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_bool(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_recordContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCURLY() { return GetToken(FullPolyParser.LCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FieldtypesContext fieldtypes() {
			return GetRuleContext<FieldtypesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCURLY() { return GetToken(FullPolyParser.RCURLY, 0); }
		public At_recordContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_record(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_ucidContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UCID() { return GetToken(FullPolyParser.UCID, 0); }
		public At_ucidContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_ucid(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_uunitContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UUNIT() { return GetToken(FullPolyParser.UUNIT, 0); }
		public At_uunitContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_uunit(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_typeContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(FullPolyParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(FullPolyParser.RPAREN, 0); }
		public At_typeContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_type(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_variantContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LT() { return GetToken(FullPolyParser.LT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FieldtypesContext fieldtypes() {
			return GetRuleContext<FieldtypesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GT() { return GetToken(FullPolyParser.GT, 0); }
		public At_variantContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_variant(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_ustringContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode USTRING() { return GetToken(FullPolyParser.USTRING, 0); }
		public At_ustringContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_ustring(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_ufloatContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UFLOAT() { return GetToken(FullPolyParser.UFLOAT, 0); }
		public At_ufloatContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullPolyVisitor<TResult> typedVisitor = visitor as IFullPolyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_ufloat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_someContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCURLY() { return GetToken(FullPolyParser.LCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SOME() { return GetToken(FullPolyParser.SOME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UCID() { return GetToken(FullPolyParser.UCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(FullPolyParser.COMMA, 0); }
